[UTF-8][Japanese]

*Ver3.xx : 2019/xx/xx

-Pocketのシェア数が取得できなくなっていたので取得機能を削除しました。((query.yahooapis.com が突然サービス終了したため))
-【Fix】稀に最初のファイルアップロードに失敗することがある。

*Ver3.22 : 2019/02/15

-【Fix】sitemapプラグインが動かない。
-【Fix】AMPプラグインにCSSが適用されない。
-【Fix】mod_perl2環境で動作が不安定。
-【Fix】インポート等のセッション画面表示がおかしい。
-【httpd/EXE】コードを若干変更。

*Ver3.21b : 2019/02/12

-内部処理を見直し、2%-5%程度処理を高速化しました。
-起動時のパス解析を更新しました。
-静的出力（エクスポート）機能を更新しました。
-テーマ選択画面を少し見やすくしました。
-【記法】Markdown式の「```～```」等の[https://adiary.org/v3man/Satsuki/block:ブロック記法]に対応しました。((シンタックスハイライトや数式記法は人によってはよく使うにもかかわらず記述方法がややこしいので、覚えやすい記法をMarkdownより輸入しました。))
-【記法】ブロック記法を若干改良しました。
-【記法】同じ内容の注釈でもセクションが異なれば別々に出力するようにしました。
-【記法】フィルター記法をはてなブログURLに対応させました。
-【Markdown】注釈記法を追加しました。
-【Markdown】[https://qiita.com/Qiita/items/c686397e4a0f4f11683d#%E6%95%B0%E5%BC%8F%E3%81%AE%E6%8C%BF%E5%85%A5:Qiitaのmathブロック記法]を追加しました。
-【httpd/EXE】max_request設定を追加し、デーモンの自動再起動を内蔵しました。((長期運用したときメモリリークしないための措置です))
-【httpd/EXE】引数を若干変更しました。
-【httpd/EXE】adiary.conf.cgiが存在しない時、自動生成するようにしました。
-【plugin】JavaScriptプラグインを更新。
-【plugin】フリー入力プラグイン（メイン部）に表示条件を選択する機能が付きました。
-【plugin】メール通知プラグイン。sendmailコマンドを止め、SMTPで送信するようになりました。
-【Fix】JavaScript強制更新用queryが一部正しくない。
-【Fix】Perl5.8で動かない。（[https://adiary.adiary.jp/0405#c3:Thanks to 漁]）
-【Fix/デザイン編集】単一記事表示の編集リンクが移動できてしまう。
-【Fix/記法】gist/githubのソース貼り付けが動作していない。
-【Fix/Markdown】コメントのみの行を、行処理してしまう。
-【Ver3.21a】Ver3.21で変更した「figure caption」の仕様を元に戻しました。((問題しかありませんでした……))
-【Ver3.21b】【Fix】テキストエリアでTABが入力できない。
-他

*Ver3.20 : 2018/12/27

-スタンドアローンHTTPサーバ機能を持った adiary.httpd.pl が開発されました。
-Windows用実行ファイル adiary.exe が開発されました。
-[bf:IE9, IE10のサポートを終了しました]（対策コードを削除しました）。
-数字のみのコンテンツkeyを許可しました。
--数字のみのコンテンツkeyを指定できるよう{[link:XXX]}記法を作成しました（[https://adiary.org/v3man/Satsuki-tag/:詳細]）。
--日付指定を path_info からqueryに変更しました。
--時刻による記事指定の仕様を変更し、{[tm:XXX]}記法を作成しました。
-高速化対策を行いました。（[https://developers.google.com/speed/pagespeed/insights/:Google PageSpeed Insights]）
--{<script defer>}を使用し、ページのロードを高速化しました。
--一部のCSSを遅延読み込みするよう変更しました。
--CGI動作以外でのライブラリの自動更新チェックを1秒1回だけ実施するよう変更しました。