@@ -3,7 +3,9 @@
 *Ver3.xx : 2019/xx/xx
 
 -Pocketのシェア数が取得できなくなっていたので取得機能を削除しました。((query.yahooapis.com が突然サービス終了したため))
+-【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
 -【Fix】稀に最初のファイルアップロードに失敗することがある。
+-他
 
 *Ver3.22 : 2019/02/15
 
